# investment-dashboard

./: pyproject.toml
meu_monitor_de_stocks/: app.py  functions.py  historical_data.csv  index.py
meu_monitor_de_stocks/components/: fixed_row.py  home.py  modal.py  wallet.py
